# pickup

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/pickup/: __init__.py  align.py  cli.py  errors.py  models.py  normalize.py  ptx.py  script.py  transcribe.py
tests/: conftest.py  test_align.py  test_normalize.py  test_script.py  test_transcribe.py
tests/fixtures/: sample.scribe.json
